2005-07-10  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.model.epanet.loadresultsfortimestep.ave: Don't try to link
	results to tables with 0 records

2005-07-06  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/docbook.css: Improved layout of Author names and their email
	addresses.

2005-07-05  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.popup.pipes.selectconnectedpipes.ave:
	* doc/en/dcwaterdesign.xml:
	* dcwatdes.view.popup.pipes.selectconnectedpipesinteractive.ave: Looking
	for "closed" substring rather than complete match now
	* dcwatdesextension.make.ave: Version number is 2.11+cvs now
	* doc/dcwatdes_manual.lyx: Removed old manual format
                                                                          
2005-01-22  Steffen Macke <Steffen_Macke@gmail.com>

	* doc/docbook.xsl: improved documentation layout
	* doc/en/dcwaterdesign.xml: 
	* build.xml:
	* installer/dc_water_design_extension.nsi: updated for 2.11 release 
	* dcwatdes.model.importinpfile: updated for inp2shp 0.2.0; showing
	inp2shp errors and statistics
	* build.xml:
	* inp2shp/inp2shp.c:
	* inp2shp/inp2shp.h:
	* inp2shp/doc/doxygen/doxygen.cfg:
	* inp2shp/Makefile: inp2shp version 0.2.0; improved robustness;
	statistics output; more correct handling of virtual lines; added
	doxygen API documentation; added possibility to generate DEBUG output;
	added TODOs

2005-01-18  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.model.epanet.loadresultsforstep:
	* dcwatdes.model.epanet.results.importbinary:
	* dcwatdes.model.epanet.run: fixed bug that prevented the use of
	these functions for projects that contained grids (bug #1104509)
	
2004-10-30  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* installer/installer-header.bmp:
	* installer/dc_water_design_extension.nsi: Moved installer to Modern
	User Interface (MUI)
	* dcwatdes.model.epanet.junctions.createmissing: fixed robustness 
	problem (bug #1057313)